--- a/web/src/app/components/task/task.component.html
+++ b/web/src/app/components/task/task.component.html
@@ -3,7 +3,7 @@
     <mat-expansion-panel-header class="flex justify-between">
       <mat-panel-title> Task </mat-panel-title>
       <div class="flex items-center">
-        <span class="rounded-md mr-2 bg-red-400 px-2 text-white">
+        <span class="rounded-md mr-2 border border-green-300 bg-green-100 text-green-500 px-2 py-1 rounded">
           Status
         </span>
         <button mat-icon-button>
