feat: Add test variable.

--- a/web/src/app/components/task/task.component.html
+++ b/web/src/app/components/task/task.component.html
@@ -1,7 +1,7 @@
 <div class="flex justify-center items-center p-4">
   <mat-expansion-panel hideToggle class="max-w-3xl w-full flex flex-col gap-3 items-center">
     <mat-expansion-panel-header class="flex justify-between">
-      <mat-panel-title> {{task.name | capitalize}} </mat-panel-title>
+      <mat-panel-title> {{task.title | capitalize}} </mat-panel-title>
       <div class="flex items-center">
         <span class="rounded-md mr-2 border border-green-300 bg-green-100 text-green-500 px-2 py-1">
           Status
