--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
 <app-search-bar></app-search-bar>
-<app-task></app-task>
+<app-task [task]="test"></app-task>
 <router-outlet></router-outlet>
