--- a/web/src/app/components/task/task.component.html
+++ b/web/src/app/components/task/task.component.html
@@ -1,19 +1,24 @@
 <div class="flex justify-center items-center p-4">
-  <mat-expansion-panel hideToggle class="max-w-3xl w-full flex flex-col gap-3 items-center">
-    <mat-expansion-panel-header class="flex justify-between">
-      <mat-panel-title> {{task.title | capitalize}} </mat-panel-title>
-      <div class="flex items-center">
-        <span class="rounded-md mr-2 border border-green-300 bg-green-100 text-green-500 px-2 py-1">
-          Status
-        </span>
-        <button mat-icon-button (click)="removeTask()">
-          <mat-icon class="text-gray-500">edit</mat-icon>
-        </button>
-        <button mat-icon-button (click)="updateTask()">
-          <mat-icon class="text-gray-500">delete</mat-icon>
-        </button>
-      </div>
-    </mat-expansion-panel-header>
-    <p>{{task.description}}</p>
-  </mat-expansion-panel>
-</div>
+    <mat-expansion-panel hideToggle class="max-w-3xl w-full flex flex-col gap-3 items-center">
+      <mat-expansion-panel-header class="flex justify-between">
+        <mat-panel-title> {{ task.title | capitalize }} </mat-panel-title>
+        <div class="flex items-center">
+          <span
+            [ngClass]="getStatusClasses()"
+            class="rounded-md mr-2 border px-2 py-1"
+          >
+            {{ task.status }}
+          </span>
+  
+          <button mat-icon-button (click)="removeTask()">
+            <mat-icon class="text-gray-500">edit</mat-icon>
+          </button>
+          <button mat-icon-button (click)="updateTask()">
+            <mat-icon class="text-gray-500">delete</mat-icon>
+          </button>
+        </div>
+      </mat-expansion-panel-header>
+      <p>{{ task.description }}</p>
+    </mat-expansion-panel>
+  </div>
+  
