refactor: Create home page

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,7 +1,4 @@
 <app-header></app-header>
 <app-search-bar></app-search-bar>
-<div class="tasks-list">
-    <app-task *ngFor="let task of tasks" [task]="task"></app-task>
-  </div>
-  
+<app-home></app-home>
 <router-outlet></router-outlet>
