Create search function

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-header></app-header>
-<app-search-bar></app-search-bar>
+<app-search-bar
+    (search)="handleSearch($event)">
+</app-search-bar>
 <router-outlet></router-outlet>
