--- a/web/src/app/components/task/task.component.html
+++ b/web/src/app/components/task/task.component.html
@@ -2,10 +2,13 @@
     <mat-expansion-panel hideToggle class="max-w-3xl w-full flex flex-col gap-3 items-center">
       <mat-expansion-panel-header class="flex justify-between">
         <mat-panel-title> {{ task.title | capitalize }} </mat-panel-title>
-        <div class="flex items-center">
+        <div class="flex items-center relative">
+          
+          <!-- Task Status (Click to toggle dropdown) -->
           <span
             [ngClass]="getStatusClasses()"
-            class="rounded-md mr-2 border px-2 py-1"
+            class="rounded-md mr-2 border px-2 py-1 cursor-pointer"
+            (click)="toggleStatusDropdown($event)"
           >
             {{ task.status }}
           </span>
@@ -20,5 +23,18 @@
       </mat-expansion-panel-header>
       <p>{{ task.description }}</p>
     </mat-expansion-panel>
+  </div>
+  
+  <!-- Status Dropdown (only visible when isDropdownVisible is true) -->
+  <div *ngIf="isDropdownVisible" 
+       id="status-dropdown-{{ task.id }}"
+       [ngStyle]="{ left: dropdownPosition?.left + 'px', top: dropdownPosition?.top + 'px' }"
+       class="absolute w-48 bg-white border rounded-md shadow-lg z-10 max-h-60 overflow-y-auto">
+    <!-- Status options -->
+    <div *ngFor="let status of statuses" 
+         class="px-4 py-2 cursor-pointer hover:bg-gray-200"
+         (click)="changeStatus(status)">
+      {{ status }}
+    </div>
   </div>
   
