feat: Create edit task component.

--- a/web/src/app/components/confirm-dialog/confirm-dialog.component.html
+++ b/web/src/app/components/confirm-dialog/confirm-dialog.component.html
@@ -4,5 +4,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close="cancel">Annuler</button>
-  <button mat-raised-button color="warn" [mat-dialog-close]="'confirm'">Confirmer</button>
+  <button mat-raised-button color="primary" [mat-dialog-close]="'confirm'">Confirmer</button>
 </mat-dialog-actions>
