--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,4 +1,3 @@
 <app-header></app-header>
-<app-search-bar></app-search-bar>
-<app-edit-task></app-edit-task>
+<app-search-bar (add)="createTask()"></app-search-bar>
 <router-outlet></router-outlet>
