--- a/web/src/app/components/edit-task/edit-task.component.html
+++ b/web/src/app/components/edit-task/edit-task.component.html
@@ -1,13 +1,32 @@
-<mat-dialog-container>
-    <mat-dialog-content>
-        <mat-card>
-            <mat-card-header>
-                <mat-card-title>d</mat-card-title>
-            </mat-card-header>
-        </mat-card>
-        <mat-dialog-actions>
-            <button mat-button>Cancel</button>
-            <button mat-button>Reset</button>
-        </mat-dialog-actions>
-    </mat-dialog-content>
-</mat-dialog-container>
+<h2 mat-dialog-title>{{form.value["id"] ? 'Edit task' : 'Create task'}}</h2>
+<mat-dialog-content>
+    <form [formGroup]="form" class="flex flex-col gap-3 w-full">
+        <mat-form-field appearance="outline">
+            <input matInput formControlName="title" placeholder="Task title">
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+            <textarea matInput formControlName="description" placeholder="Task description" rows="5"></textarea>
+        </mat-form-field>
+        <mat-form-field>
+            <mat-select formControlName="status">
+                <mat-option *ngFor="let status of TaskStatus | keyvalue" [value]="status.value">
+                    {{ status.key }}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+            <input matInput [matDatepicker]="startDatePicker" formControlName="startDate" placeholder="Choose a date">
+            <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
+            <mat-datepicker #startDatePicker></mat-datepicker>
+        </mat-form-field>
+        <mat-form-field appearance="outline">
+            <input matInput [matDatepicker]="endDatePicker" formControlName="endDate" placeholder="Choose a date">
+            <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
+            <mat-datepicker #endDatePicker></mat-datepicker>
+        </mat-form-field>
+    </form>
+</mat-dialog-content>
+<mat-dialog-actions align="end">
+    <button mat-button mat-dialog-close="cancel">Annuler</button>
+    <button mat-raised-button [disabled]="!form.valid" color="primary" [mat-dialog-close]="form.value">Enregistrer</button>
+</mat-dialog-actions>
