--- a/web/src/app/components/task/task.component.html
+++ b/web/src/app/components/task/task.component.html
@@ -3,20 +3,18 @@
       <mat-expansion-panel-header class="flex justify-between">
         <mat-panel-title> {{ task.title | capitalize }} </mat-panel-title>
         <div class="flex items-center relative">
-          
-          <!-- Task Status (Click to toggle dropdown) -->
           <span
             [ngClass]="getStatusClasses()"
-            class="rounded-md mr-2 border px-2 py-1 cursor-pointer"
+            class="rounded-md mr-2 border px-2 py-1 cursor-pointer select-none"
             (click)="toggleStatusDropdown($event)"
           >
             {{ task.status }}
           </span>
   
-          <button mat-icon-button (click)="updateTask()">
+          <button mat-icon-button (click)="updateTask($event)">
             <mat-icon class="text-gray-500">edit</mat-icon>
           </button>
-          <button mat-icon-button (click)="removeTask()">
+          <button mat-icon-button (click)="removeTask($event)">
             <mat-icon class="text-gray-500">delete</mat-icon>
           </button>
         </div>
@@ -25,12 +23,10 @@
     </mat-expansion-panel>
   </div>
   
-  <!-- Status Dropdown (only visible when isDropdownVisible is true) -->
   <div *ngIf="isDropdownVisible" 
        id="status-dropdown-{{ task.id }}"
        [ngStyle]="{ left: dropdownPosition?.left + 'px', top: dropdownPosition?.top + 'px' }"
        class="absolute w-48 bg-white border rounded-md shadow-lg z-10 max-h-60 overflow-y-auto">
-    <!-- Status options -->
     <div *ngFor="let status of statuses" 
          class="px-4 py-2 cursor-pointer hover:bg-gray-200"
          (click)="changeStatus(status)">
