--- a/web/src/app/components/header/header.component.html
+++ b/web/src/app/components/header/header.component.html
@@ -1,3 +1,3 @@
 <mat-toolbar>
-    <a routerLink="/home" mat-button class="text-3xl">Todo</a>
+    <a routerLink="/home" mat-button class="text-3xl">TODO</a>
 </mat-toolbar>
