feat: Implement delete, update and snackbar message.

--- a/web/src/app/pages/home/home.component.html
+++ b/web/src/app/pages/home/home.component.html
@@ -4,5 +4,6 @@
       [task]="task" 
       (remove)="handleRemoveTask($event)"
       (update)="handleUpdateTask($event)"
+      (updateState)="handleUpdateTaskState($event)"
     ></app-task>
 </div>
