--- a/web/src/app/components/edit-task/edit-task.component.html
+++ b/web/src/app/components/edit-task/edit-task.component.html
@@ -7,26 +7,29 @@
         <mat-form-field appearance="outline">
             <textarea matInput formControlName="description" placeholder="Task description" rows="5"></textarea>
         </mat-form-field>
-        <mat-form-field>
+        <mat-form-field appearance="outline">
             <mat-select formControlName="state">
                 <mat-option *ngFor="let state of TaskStatus | keyvalue" [value]="state.key">
                     {{ state.value }}
                 </mat-option>
             </mat-select>
         </mat-form-field>
+
         <mat-form-field appearance="outline">
-            <input matInput [matDatepicker]="startDatePicker" formControlName="startDate" placeholder="Choose a date">
-            <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
-            <mat-datepicker #startDatePicker></mat-datepicker>
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-            <input matInput [matDatepicker]="endDatePicker" formControlName="endDate" placeholder="Choose a date">
-            <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
-            <mat-datepicker #endDatePicker></mat-datepicker>
-        </mat-form-field>
+            <mat-date-range-input
+              [rangePicker]="picker"
+              [comparisonStart]="form.value['startDate']"
+              [comparisonEnd]="form.value['endDate']">
+              <input matStartDate placeholder="Start date" formControlName="startDate">
+              <input matEndDate placeholder="End date" formControlName="endDate">
+            </mat-date-range-input>
+            <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-date-range-picker #picker></mat-date-range-picker>
+          </mat-form-field>
     </form>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close="cancel">Annuler</button>
-    <button mat-raised-button [disabled]="!form.valid" color="primary" [mat-dialog-close]="form.value">Enregistrer</button>
+    <button mat-button mat-dialog-close>Annuler</button>
+    <button mat-raised-button [disabled]="!form.valid" color="primary"
+        [mat-dialog-close]="form.value">Enregistrer</button>
 </mat-dialog-actions>
