feat: Multiple deletion.

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,3 +1,8 @@
 <app-header></app-header>
-<app-search-bar (add)="createTask()" (search)="handleSearch($event)"></app-search-bar>
+<app-search-bar 
+[showDeleteIcon]="delete"
+(add)="createTask()" 
+(search)="handleSearch($event)"
+(delete)="handleDelete()"
+></app-search-bar>
 <router-outlet></router-outlet>
