--- a/web/src/app/components/task/task.component.html
+++ b/web/src/app/components/task/task.component.html
@@ -1,7 +1,16 @@
 <div class="flex justify-center items-center p-4">
   <mat-expansion-panel hideToggle class="max-w-3xl w-full flex flex-col gap-3 items-center">
     <mat-expansion-panel-header class="flex justify-between">
-      <mat-panel-title> {{ task.title | capitalize }} </mat-panel-title>
+      <mat-panel-title>
+        <mat-checkbox 
+        [checked]="selected" 
+        (change)="selectTask($event)"
+        (click)="$event.stopPropagation()">
+        </mat-checkbox>
+        <span>
+          {{ task.title | capitalize }}
+        </span> 
+      </mat-panel-title>
       <div class="flex items-center relative">
         <span [ngClass]="getStatusClasses()" class="rounded-md mr-2 border px-2 py-1 cursor-pointer select-none"
           (click)="toggleStatusDropdown($event)">
