--- a/web/src/app/pages/home/home.component.html
+++ b/web/src/app/pages/home/home.component.html
@@ -5,5 +5,6 @@
       (remove)="handleRemoveTask($event)"
       (update)="handleUpdateTask($event)"
       (updateState)="handleUpdateTaskState($event)"
+      (select)="handleSelectTask($event)"
     ></app-task>
 </div>
