fix: Dropdown and Status dynamic styling

--- a/web/src/app/components/task/task.component.html
+++ b/web/src/app/components/task/task.component.html
@@ -1,39 +1,53 @@
 <div class="flex justify-center items-center p-4">
-  <mat-expansion-panel hideToggle class="max-w-3xl w-full flex flex-col gap-3 items-center">
-    <mat-expansion-panel-header class="flex justify-between">
-      <mat-panel-title>
-        <mat-checkbox 
-        [checked]="selected" 
-        (change)="selectTask($event)"
-        (click)="$event.stopPropagation()">
-        </mat-checkbox>
-        <span>
-          {{ task.title | capitalize }}
-        </span> 
-      </mat-panel-title>
-      <div class="flex items-center relative">
-        <span [ngClass]="getStatusClasses()" class="rounded-md mr-2 border px-2 py-1 cursor-pointer select-none"
-          (click)="toggleStatusDropdown($event)">
-          {{ task.state | keyToDescription : TaskState }}
+    <mat-expansion-panel hideToggle class="max-w-3xl w-full flex flex-col gap-3 items-center">
+      <mat-expansion-panel-header class="flex justify-between">
+        <mat-panel-title>
+          <mat-checkbox 
+            [checked]="selected" 
+            (change)="selectTask($event)"
+            (click)="$event.stopPropagation()">
+          </mat-checkbox>
+          <span>
+            {{ task.title | capitalize }}
+          </span> 
+        </mat-panel-title>
+        <div class="flex items-center relative">
+            <span
+            class="rounded-md mr-2 border px-2 py-1 cursor-pointer select-none"
+            [class.border-green-300]="task.state === TaskState.DONE"
+            [class.bg-green-100]="task.state === TaskState.DONE"
+            [class.text-green-600]="task.state === TaskState.DONE"
+            [class.border-yellow-300]="task.state === TaskState.DOING"
+            [class.bg-yellow-100]="task.state === TaskState.DOING"
+            [class.text-yellow-600]="task.state === TaskState.DOING"
+            [class.border-blue-300]="task.state === TaskState.TODO"
+            [class.bg-blue-100]="task.state === TaskState.TODO"
+            [class.text-blue-600]="task.state === TaskState.TODO"
+            [class.border-red-300]="task.state === TaskState.CANCELLED"
+            [class.bg-red-100]="task.state === TaskState.CANCELLED"
+            [class.text-red-600]="task.state === TaskState.CANCELLED"
+            (click)="toggleStatusDropdown($event)">
+            {{ stateDisplayMap[task.state] }}
         </span>
-
-        <button mat-icon-button (click)="updateTask($event)">
-          <mat-icon class="text-gray-500">edit</mat-icon>
-        </button>
-        <button mat-icon-button (click)="removeTask($event)">
-          <mat-icon class="text-gray-500">delete</mat-icon>
-        </button>
-      </div>
-    </mat-expansion-panel-header>
-    <p>{{ task.description }}</p>
-  </mat-expansion-panel>
-</div>
-
-<div *ngIf="isDropdownVisible" id="state-dropdown-{{ task.id }}"
-  [ngStyle]="{ left: dropdownPosition?.left + 'px', top: dropdownPosition?.top + 'px' }"
-  class="absolute w-48 bg-white border rounded-md shadow-lg z-10 max-h-60 overflow-y-auto">
-  <div *ngFor="let state of TaskState | keyvalue" class="px-4 py-2 cursor-pointer hover:bg-gray-200"
-    (click)="changeState(state.key)">
-    {{ state.value }}
+  
+          <button mat-icon-button (click)="updateTask($event)">
+            <mat-icon class="text-gray-500">edit</mat-icon>
+          </button>
+          <button mat-icon-button (click)="removeTask($event)">
+            <mat-icon class="text-gray-500">delete</mat-icon>
+          </button>
+        </div>
+      </mat-expansion-panel-header>
+      <p>{{ task.description }}</p>
+    </mat-expansion-panel>
   </div>
-</div>
+  
+  <div *ngIf="isDropdownVisible" id="state-dropdown-{{ task.id }}"
+    [ngStyle]="{ left: dropdownPosition?.left + 'px', top: dropdownPosition?.top + 'px' }"
+    class="absolute w-48 bg-white border rounded-md shadow-lg z-10 max-h-60 overflow-y-auto">
+    <div *ngFor="let state of TaskState | keyvalue" class="px-4 py-2 cursor-pointer hover:bg-gray-200"
+      (click)="changeState(state.key)">
+      {{ stateDisplayMap[state.value] }}
+    </div>
+  </div>
+  
