feat: Add indicator for delayed task.

--- a/web/src/app/components/task/task.component.html
+++ b/web/src/app/components/task/task.component.html
@@ -1,42 +1,45 @@
 <div class="flex justify-center items-center p-4">
-    <mat-expansion-panel hideToggle class="max-w-3xl w-full flex flex-col gap-3 items-center">
-      <mat-expansion-panel-header class="flex justify-between">
-        <mat-panel-title>
-          <mat-checkbox 
-            [checked]="selected" 
-            (change)="selectTask($event)"
-            (click)="$event.stopPropagation()">
-          </mat-checkbox>
-          <span>
-            {{ task.title | capitalize }}
-          </span> 
-        </mat-panel-title>
-        <div class="flex items-center relative">
-            <span
-                [ngClass]="getStatusClass()"
-                (click)="toggleStatusDropdown($event)">
-                {{ stateDisplayMap[task.state] }}
-            </span>
-  
-          <button mat-icon-button (click)="updateTask($event)">
-            <mat-icon class="text-gray-500">edit</mat-icon>
-          </button>
-          <button mat-icon-button (click)="removeTask($event)">
-            <mat-icon class="text-gray-500">delete</mat-icon>
-          </button>
-        </div>
-      </mat-expansion-panel-header>
-      <p>{{ task.description }}</p>
-      <p class="text-end">À compléter avant le : {{ task.endDate | date: "MMM dd, yyyy" }}</p>
-    </mat-expansion-panel>
+  <mat-expansion-panel hideToggle class="max-w-3xl w-full flex flex-col gap-3 items-center">
+    <mat-expansion-panel-header class="flex justify-between">
+      <mat-panel-title>
+        <mat-checkbox [checked]="selected" (change)="selectTask($event)" (click)="$event.stopPropagation()">
+        </mat-checkbox>
+        <span>
+          {{ task.title | capitalize }}
+        </span>
+      </mat-panel-title>
+      <div class="flex items-center relative">
+        <span [ngClass]="getStatusClass()" (click)="toggleStatusDropdown($event)">
+          {{ stateDisplayMap[task.state] }}
+        </span>
+
+        <button mat-icon-button (click)="updateTask($event)">
+          <mat-icon class="text-gray-500">edit</mat-icon>
+        </button>
+        <button mat-icon-button (click)="removeTask($event)">
+          <mat-icon class="text-gray-500">delete</mat-icon>
+        </button>
+      </div>
+    </mat-expansion-panel-header>
+    <p>{{ task.description }}</p>
+    <!-- <p class="text-end">À compléter avant le : {{ task.endDate | date: "MMM dd, yyyy" }}</p> -->
+    <span class="rounded-full flex items-end justify-end">
+      <mat-icon [ngClass]="
+        {
+          'text-gray-500': !isDelayed(),
+          'text-red-400': isDelayed()
+        }
+        ">calendar_today</mat-icon>
+      {{ task.endDate | date: "MMM dd, yyyy" }}
+    </span>
+  </mat-expansion-panel>
+</div>
+
+<div *ngIf="isDropdownVisible" id="state-dropdown-{{ task.id }}"
+  [ngStyle]="{ left: dropdownPosition?.left + 'px', top: dropdownPosition?.top + 'px' }"
+  class="absolute w-48 bg-white border rounded-md shadow-lg z-10 max-h-60 overflow-y-auto">
+  <div *ngFor="let state of TaskState | keyvalue" class="px-4 py-2 cursor-pointer hover:bg-gray-200"
+    (click)="changeState(state.key)">
+    {{ stateDisplayMap[state.value] }}
   </div>
-  
-  <div *ngIf="isDropdownVisible" id="state-dropdown-{{ task.id }}"
-    [ngStyle]="{ left: dropdownPosition?.left + 'px', top: dropdownPosition?.top + 'px' }"
-    class="absolute w-48 bg-white border rounded-md shadow-lg z-10 max-h-60 overflow-y-auto">
-    <div *ngFor="let state of TaskState | keyvalue" class="px-4 py-2 cursor-pointer hover:bg-gray-200"
-      (click)="changeState(state.key)">
-      {{ stateDisplayMap[state.value] }}
-    </div>
-  </div>
-  
+</div>
