--- a/web/src/app/components/edit-task/edit-task.component.html
+++ b/web/src/app/components/edit-task/edit-task.component.html
@@ -1,16 +1,17 @@
-<h2 mat-dialog-title>{{form.value["id"] ? 'Edit task' : 'Create task'}}</h2>
+<h2 mat-dialog-title>{{ form.value["id"] ? getTranslation('task.actions.edit') : getTranslation('task.actions.create') }}</h2>
+
 <mat-dialog-content>
     <form [formGroup]="form" class="flex flex-col gap-3 w-full">
         <mat-form-field appearance="outline">
-            <input matInput formControlName="title" placeholder="Task title">
+            <input matInput formControlName="title" [placeholder]="getTranslation('task.form.title')">
         </mat-form-field>
         <mat-form-field appearance="outline">
-            <textarea matInput formControlName="description" placeholder="Task description" rows="5"></textarea>
+            <textarea matInput formControlName="description" [placeholder]="getTranslation('task.form.description')" rows="5"></textarea>
         </mat-form-field>
         <mat-form-field appearance="outline">
             <mat-select formControlName="state">
                 <mat-option *ngFor="let state of TaskStatus | keyvalue" [value]="state.key">
-                    {{ state.value }}
+                    {{ getStateDisplay(state.value) }}
                 </mat-option>
             </mat-select>
         </mat-form-field>
@@ -19,16 +20,17 @@
               [rangePicker]="picker"
               [comparisonStart]="form.value['startDate']"
               [comparisonEnd]="form.value['endDate']">
-              <input matStartDate placeholder="Start date" formControlName="startDate">
-              <input matEndDate placeholder="End date" formControlName="endDate">
+              <input matStartDate [placeholder]="getTranslation('task.form.startDate')" formControlName="startDate">
+              <input matEndDate [placeholder]="getTranslation('task.form.endDate')" formControlName="endDate">
             </mat-date-range-input>
             <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-date-range-picker #picker></mat-date-range-picker>
           </mat-form-field>
     </form>
 </mat-dialog-content>
+
 <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close>Annuler</button>
+    <button mat-button mat-dialog-close>{{ getTranslation('task.actions.cancel') }}</button>
     <button mat-raised-button [disabled]="!form.valid" color="primary"
-        [mat-dialog-close]="form.value">Enregistrer</button>
+        [mat-dialog-close]="form.value">{{ getTranslation('task.actions.save') }}</button>
 </mat-dialog-actions>
