--- a/web/src/app/components/header/header.component.html
+++ b/web/src/app/components/header/header.component.html
@@ -29,6 +29,60 @@
             class="w-6 h-6 mr-2">
           English
         </div>
+        <div 
+          class="flex items-center px-4 py-2 cursor-pointer hover:bg-gray-200"
+          (click)="changeLanguage('es')">
+          <img 
+            src="assets/language-flags/espagne.png" 
+            alt="Espagnol flag" 
+            class="w-6 h-6 mr-2">
+          Español
+        </div>
+        <div 
+          class="flex items-center px-4 py-2 cursor-pointer hover:bg-gray-200"
+          (click)="changeLanguage('de')">
+          <img 
+            src="assets/language-flags/allemagne.png" 
+            alt="German flag" 
+            class="w-6 h-6 mr-2">
+          Deutsch
+        </div>
+        <div 
+          class="flex items-center px-4 py-2 cursor-pointer hover:bg-gray-200"
+          (click)="changeLanguage('de')">
+          <img 
+            src="assets/language-flags/portugal.png" 
+            alt="Portugese flag" 
+            class="w-6 h-6 mr-2">
+            Português
+        </div>
+        <div 
+          class="flex items-center px-4 py-2 cursor-pointer hover:bg-gray-200"
+          (click)="changeLanguage('ru')">
+          <img 
+            src="assets/language-flags/russie.png" 
+            alt="Russian flag" 
+            class="w-6 h-6 mr-2">
+            Русский
+        </div>
+        <div 
+          class="flex items-center px-4 py-2 cursor-pointer hover:bg-gray-200"
+          (click)="changeLanguage('ja')">
+          <img 
+            src="assets/language-flags/japon.png" 
+            alt="Japanese flag" 
+            class="w-6 h-6 mr-2">
+            日本語
+        </div>
+        <div 
+          class="flex items-center px-4 py-2 cursor-pointer hover:bg-gray-200"
+          (click)="changeLanguage('kr')">
+          <img 
+            src="assets/language-flags/coree-du-sud.png" 
+            alt="Korean flag" 
+            class="w-6 h-6 mr-2">
+            한국어
+        </div>
       </div>
     </div>
   </mat-toolbar>
