--- a/web/src/app/components/header/header.component.html
+++ b/web/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="flex justify-between items-center relative">
+<mat-toolbar class="flex justify-between items-center relative" style="background-color: #89bbf9; color: white;">
     <a routerLink="/home" mat-button class="text-3xl">TODO</a>
     
     <div class="relative">
@@ -10,7 +10,7 @@
       
       <div 
         *ngIf="isDropdownVisible" 
-        class="absolute right-0 mt-2 w-48 bg-white border rounded-md shadow-lg z-10">
+        class="absolute right-0 mt-2 w-48 bg-white border rounded-md shadow-lg z-10" style="color: rgb(45, 45, 45); font-size: small;">
         <div 
           class="flex items-center px-4 py-2 cursor-pointer hover:bg-gray-200"
           (click)="changeLanguage('fr')">
