feat: Filter by status.

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -4,5 +4,6 @@
 (add)="createTask()" 
 (search)="handleSearch($event)"
 (delete)="handleDelete()"
+(state)="handleChangeState($event)"
 ></app-search-bar>
 <router-outlet></router-outlet>
