--- a/web/src/app/components/search-bar/search-bar.component.html
+++ b/web/src/app/components/search-bar/search-bar.component.html
@@ -1,21 +1,26 @@
 <mat-card class="max-w-3xl mx-auto mt-7">
-    <mat-card-content class="flex flex-row justify-between gap-3 items-center h-full">
-      <div class="relative flex gap-3 items-center w-full">
-        <span class="text-gray-400 hover:cursor-pointer" (click)="submitSearch()">
-          <mat-icon>search</mat-icon>
-        </span>
-        <input 
-          class="focus:outline-none pl-10 pr-10 w-full h-full" 
-          [placeholder]="placeholder" 
-          [(ngModel)]="searchTerm" 
-          (keyup)="submitSearch()">
-        <span class="text-gray-400 hover:cursor-pointer" (click)="addNewTask()">
-          <mat-icon>add</mat-icon>
-        </span>
-        <span *ngIf="showDeleteIcon" class="text-gray-400 hover:cursor-pointer" (click)="delete.emit()">
-          <mat-icon>delete</mat-icon>
-        </span>
-      </div>
-    </mat-card-content>
-  </mat-card>
-  
+  <mat-card-content class="flex flex-row justify-between gap-3 items-center h-full">
+    <div class="relative flex gap-3 items-center w-full">
+      <span class="text-gray-400 hover:cursor-pointer" (click)="submitSearch()">
+        <mat-icon>search</mat-icon>
+      </span>
+      <input class="focus:outline-none pl-10 pr-10 w-full h-full" [placeholder]="placeholder" [(ngModel)]="searchTerm"
+        (keyup)="submitSearch()">
+      <span class="text-gray-400 hover:cursor-pointer" (click)="addNewTask()">
+        <mat-icon>add</mat-icon>
+      </span>
+      <button mat-button [matMenuTriggerFor]="menu" class="flex-nowrap whitespace-nowrap">
+        <span class="text-gray-400 overflow-hidden text-ellipsis">{{getStateDisplay()}}</span>
+      </button>
+      <mat-menu #menu="matMenu">
+        <div *ngFor="let state of TaskState | keyvalue" class="py-2">
+          <button mat-menu-item (click)="switchSate(state.key)">
+            {{stateDisplayMap[state.value]}}</button>
+        </div>
+      </mat-menu>
+      <span *ngIf="showDeleteIcon" class="text-gray-400 hover:cursor-pointer" (click)="delete.emit()">
+        <mat-icon>delete</mat-icon>
+      </span>
+    </div>
+  </mat-card-content>
+</mat-card>
