--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,6 +1,2 @@
-<div class="fixed top-0 w-full bg-white z-10">
-    <app-header></app-header>
-    <app-search-bar [showDeleteIcon]="delete" (add)="createTask()" (search)="handleSearch($event)"
-        (delete)="handleDelete()" (state)="handleChangeState($event)"></app-search-bar>
-</div>
-<router-outlet></router-outlet>
+
+<router-outlet class="mt-10"></router-outlet>
