--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,2 +1,4 @@
-
-<router-outlet class="mt-10"></router-outlet>
+<div class="fixed top-0 w-full bg-white z-10">
+    <app-header></app-header>
+</div>
+<router-outlet></router-outlet>
