--- a/web/src/app/pages/signup/signup.component.html
+++ b/web/src/app/pages/signup/signup.component.html
@@ -1,40 +1,25 @@
 <div class="sign-up-container flex flex-col items-center justify-center min-h-screen bg-gray-100">
   <div class="bg-white shadow-lg rounded-lg p-8 w-full max-w-md">
-    <h1 class="text-2xl font-bold text-center mb-6 text-gray-800">{{ languageService.translate('auth.signup.title') }}</h1>
-    <form (ngSubmit)="signUp()" class="space-y-6">
-      <div>
-        <label for="email" class="block text-sm font-medium text-gray-700">{{ languageService.translate('auth.signup.email') }}</label>
-        <input
-          type="email"
-          id="email"
-          [(ngModel)]="email"
-          name="email"
-          required
-          class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-lg shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm"
-        />
-      </div>
-      <div>
-        <label for="password" class="block text-sm font-medium text-gray-700">{{ languageService.translate('auth.signup.password') }}</label>
-        <input
-          type="password"
-          id="password"
-          [(ngModel)]="password"
-          name="password"
-          required
-          class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-lg shadow-sm focus:ring-blue-500 focus:border-blue-500 sm:text-sm"
-        />
-      </div>
-      <button
-        type="submit"
-        class="w-full bg-blue-500 hover:bg-blue-600 text-white font-medium py-2 px-4 rounded-lg shadow-md focus:ring-2 focus:ring-blue-300 focus:ring-offset-1"
-      >
-      {{ languageService.translate('auth.signup.signUp') }}
+    <h2 class="text-center">{{ languageService.translate('auth.signup.title') }}</h2>
+    <form (ngSubmit)="signUp()" class="space-y-6 flex flex-col items-center w-full mb-3">
+      <mat-form-field appearance="outline" class="w-full">
+        <input matInput type="email" id="email" [(ngModel)]="email" name="email" required
+          placeholder="{{ languageService.translate('auth.signup.email') }}" />
+      </mat-form-field>
+      <mat-form-field appearance="outline" class="w-full">
+        <input matInput type="password" id="password" [(ngModel)]="password" name="password" required
+          placeholder="{{ languageService.translate('auth.signup.password') }}" class="w-full" />
+      </mat-form-field>
+      <button mat-raised-button color="primary" type="submit" class="w-full">
+        {{ languageService.translate('auth.signup.signUp') }}
       </button>
     </form>
-    <p class="text-red-600 text-sm mt-4" *ngIf="errorMessage">{{ languageService.translate('auth.signup.errorMessage') }}</p>
+    <p class="text-red-600 text-sm mt-4" *ngIf="errorMessage">{{ languageService.translate('auth.signup.errorMessage')
+      }}</p>
     <p class="mt-4 text-sm text-gray-600 text-center">
       {{ languageService.translate('auth.signup.alreadyAccount') }}
-      <a routerLink="/login" class="text-blue-500 hover:underline">{{ languageService.translate('auth.signup.login') }}</a>
+      <a routerLink="/login" class="text-blue-500 hover:underline">{{ languageService.translate('auth.signup.login')
+        }}</a>
     </p>
   </div>
 </div>
